[project]
name = "flet-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Winikka",email = "3827026+HundredVisionsGuy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet (>=0.84.0,<0.85.0)"
]

[tool.poetry]
packages = [{include = "flet_test", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
